@@ -1,3 +1,7 @@
+2011-05-04  Sami Kama  <sami.kama@cern.ch>
+	* Changed skeleton.DQHistogramMerge_trf.py to use subprocess module to prevent stray processes
+	* Tagging as PATJobTransforms-00-03-37
+	
 2011-05-03  David Cote  <david.cote@cern.ch>
 	* Added outputNTUP_TRUTHFile to Reco_trf for step a2d
 	* Tagging as PATJobTransforms-00-03-36
